# dto/totp.repository.go
@@ -1,0 +1,7 @@
+package dto
+
+type OtpRepositoryTimeBasedOtpResult struct {
+	ReferenceToken  string `json:"referenceToken"`
+	Otp             string `json:"otp"`
+	ExpiryInSeconds int64  `json:"expiryInSeconds"`
+}
